syntax = "proto3";

option csharp_namespace = "RSoft.Mail.Web.Grpc.Contracts";

// service definitions
service MailSender {
	rpc Send (MailSendRequest) returns (MailSendReply);
}

// message contracts
message MailSendRequest {

	message Email {
		string address = 1;
		string name = 2;
	}

	message FileAttachment {
		string filename = 1;
		string type = 2;
		string content = 3;
	}

	Email from = 1;
	Email reply_to = 2;
	string subject = 3;
	string content = 4;
	repeated Email to = 5;
	repeated Email cc = 6;
	repeated Email bcc = 7;
	repeated FileAttachment files = 8;
	bool enable_html = 9;
	string redirect_To = 10;
}

message MailSendReply {
	bool success = 1;
	string mail_id = 2;
	string errors = 3;
}